# crm_telljfellj_modular_app

./: README.md  app.py  config.toml  layout.txt  pyproject.toml  requirements.txt
.streamlit/: secrets.toml
src/crm/: auth.py  branding.py  config.py  context.py  data.py  documents.py  layout.py  public_quote.py  quotes.py  utils.py
src/crm/pages/: courses.py  customers.py  dashboard.py  invoicing.py  leads.py  operations.py  sales.py  settings.py
src/crm/ui/: layout.py  style.py
src/crm_telljfellj.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_data_loading.py  test_sales_customers.py  test_sales_quotes.py  test_utils.py
