[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crm-telljfellj"
version = "0.2.0"
description = "Modular Streamlit CRM"
requires-python = ">=3.10"
authors = [{name = "William Berg Steffenak"}]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
